# booking-ba-scraper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/config/: settings.py
src/models/: hotel.py
src/scraping/: page_elements.py  scraper.py
src/utils/: input_validators.py  logger.py
src/writers/: csv_writer.py
tests/: test_csv_writer.py  test_scraper.py  test_validation.py
